--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "instagram-node-lib": "^0.1.1",
     "mocha": "^2.4.5",
     "node-github": "0.0.3",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "xml2js": "^0.4.16"
   },
   "dependencies": {
     "coffee-loader": "^0.7.2",
